<resources>
    <string name="app_name">Qwirkle</string>
    <string name="ip_Address">I.P Address</string>
    <string name="username">Name</string>
    <string name="start">Start</string>
    <string name="rules">Rules</string>
    <string name="play">Play</string>
    <string name="done">Done</string>
    <string name="score">Score</string>
    <string name="player">Player</string>

    <string name="number_players"><![CDATA[&#188;]]></string>
    <string name="waiting_for_players">Waiting For Players...</string>
    <string name="start_game_msg">Starting Game Shortly...</string>
    <string name="game_over">GAME OVER</string>
    <string name="game_title">Playing Qwirkle</string>
    <string name="enter_name">Enter Name</string>
    <string name="quit">Quit</string>
    <string-array name="players">
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
</resources>