<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/qwirkle_diy_02"
    tools:context=".views.ConnectActivity">

    <LinearLayout
        android:layout_width="393dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="32dp"
        android:alpha="0.95"
        android:background="#4D2292"
        android:fadingEdge="horizontal|vertical"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingTop="6dp"
        android:paddingBottom="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="352dp"
            android:layout_height="141dp"
            app:srcCompat="@drawable/qwirkle_logo" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:alpha="1"
            android:background="#4A148C"
            android:backgroundTint="#008CA373"
            android:backgroundTintMode="src_atop"
            android:fontFamily="casual"
            android:gravity="center"
            android:text="@string/game_title"
            android:textColor="@android:color/background_light"
            android:textSize="30sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:alpha="1.0"
            android:background="#388E3C"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp">

            <EditText
                android:id="@+id/playerName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginTop="8dp"
                android:backgroundTint="#E41818"
                android:ems="10"
                android:fontFamily="casual"
                android:hint="@string/enter_name"
                android:inputType="textPersonName"
                android:textAlignment="center"
                android:textColor="#FAF6F6"
                android:textColorHint="#DDBEBE"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/ip_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:backgroundTint="#F44336"
                android:ems="10"
                android:fontFamily="casual"
                android:hint="@string/ip_Address"
                android:inputType="textPersonName"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textColorHint="#B3ADAD"
                android:textStyle="bold" />

        </LinearLayout>

        <Button
            android:id="@+id/btnStartGame"
            style="@style/ButtonStyle"
            android:layout_width="127dp"
            android:layout_height="61dp"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/carter_one"
            android:onClick="onStartButton"
            android:text="@string/start"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnQuit"
            style="@style/ButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/carter_one"
            android:onClick="quitApp"
            android:text="@string/quit" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>